--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
     "@prisma/client": "^4.0.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
